# byd-rs

./: .gitignore  Cargo.toml  README.md  build.rs
byd_derive/: Cargo.toml
byd_derive/src/: lib.rs
examples/: cube.rs  terminal.rs  triangle.rs
examples/cubes/: app.rs
examples/loading/: app.rs  main.rs
examples/materials/: app.rs  main.rs
examples/materials/shaders/: color.wgsl  texture.wgsl
examples/terrain/: app.rs  main.rs  terrain.rs
shaders/: line.wgsl  primitive.wgsl  quad.frag.glsl  quad.vert.glsl  quad.wgsl  simple.frag.glsl  simple.vert.glsl  simple.wgsl
src/: actor.rs  app.rs  camera.rs  color.rs  context.rs  debug_normal.rs  drawable.rs  event.rs  geometry.rs  lib.rs  material.rs  mesh.rs  mount_context.rs  pipeline.rs  program.rs  render_context.rs  renderer.rs  scene.rs  scene_object.rs  state.rs  term.rs  texture.rs  uniforms.rs  vertex.rs  window.rs
src/gltf/: mod.rs  parse.rs
src/pipelines/: custom_pipeline.rs  line.rs  mod.rs  primitive.rs  quad.rs  simple.rs
