[package]
name = "byd"
version = "0.1.0"
edition = "2018"

[dependencies]
cgmath = "0.18.0"
wgpu = "0.9.0"
winit = { version = "0.25.0", features = ["web-sys"] }
log = "0.4.14"
env_logger = "0.8.4"
futures = "0.3.15"
downcast-rs = "1.2.0"
mutunga = { path = "../mutunga" }

[build-dependencies]
glob = "0.3.0"
shaderc = "0.7"
