[package]
name = "byd"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Williams <git@ryan.nz>"]

[dependencies]
cgmath = "0.18"
wgpu = "0.12"
winit = { version = "0.26" }
log = "0.4"
env_logger = "0.9"
futures = "0.3"
downcast-rs = "1.2"
bytemuck = "1.7"
rand = "0.8"
byd_derive = { path = "./byd_derive" }
image = "0.23"

[dev-dependencies]
noise = "0.7"

#[target.'cfg(unix)'.dependencies]
#mutunga = { path = "../mutunga" }

[build-dependencies]
glob = "0.3"
shaderc = "0.7"
